--- a/modules/ROOT/pages/apis/tinymce.editor.ui.registry.adoc
+++ b/modules/ROOT/pages/apis/tinymce.editor.ui.registry.adoc
@@ -50,8 +50,8 @@ clicked.
 For information on creating a group toolbar button, see:
 link:https://www.tiny.cloud/docs/tinymce/6/custom-group-toolbar-button/[
 UI Components - Types of toolbar buttons: Group toolbar button].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
-|xref:#addIcon[addIcon()]|Registers a new SVG icon, the icon name reference can be configured by any
-TinyMCE 5 Ui components that can display an icon. The icon is only available
+|xref:#addIcon[addIcon()]|Registers a new SVG icon. The icon name reference can be configured by any
+TinyMCE UI components that can display an icon. The icon is only available
 to the editor instance it was configured for.|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addMenuButton[addMenuButton()]|Registers a new menu button. Adds a toolbar button that opens a menu when
 clicked. The menu can be populated by items created by addMenuItem,
@@ -234,8 +234,8 @@ UI Components - Types of toolbar buttons: Group toolbar button].
 ----
 addIcon(name: String, svgData: String)
 ----
-Registers a new SVG icon, the icon name reference can be configured by any
-TinyMCE 5 Ui components that can display an icon. The icon is only available
+Registers a new SVG icon. The icon name reference can be configured by any
+TinyMCE UI components that can display an icon. The icon is only available
 to the editor instance it was configured for.
 
 ==== Examples
