--- a/modules/ROOT/pages/events.adoc
+++ b/modules/ROOT/pages/events.adoc
@@ -168,6 +168,12 @@ The following events are provided by the {productname} editor.
 |NewCell |N/A |Fired when a new table cell is created.
 |TableModified |`+{ table: HTMLTableElement, structure: boolean, style: boolean }+` |Fired when style or structural changes are made to a table.
 |TableSelectionClear |N/A |Fired when the table selection is cleared.
+|StylesTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `styles` bespoke toolbar button is updated.
+|BlocksTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `blocks` bespoke toolbar button is updated.
+|AlignTextUpdate |`+{ value: string }+` |Fired after the visible icon of the `align` bespoke toolbar button is updated.
+|FontSizeTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `fontsize` bespoke toolbar button is updated.
+|FontSizeInputTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `fontsizeinput` bespoke toolbar button is updated.
+|FontFamilyTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `fontfamily` bespoke toolbar button is updated.
 |===
 
 == Plugin events
