--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -527,6 +527,13 @@ As a consequence, these issues manifested between the first and second initializ
 
 {productname} 6.8 addresses this issue, now the editor removes the redundant second initialization of the toolbar, and fix the 'fontsizeinput' 'destroy' action, so all its components are now properly unmounted. This fix ensures that updates are only applied to components that genuinely exist.
 
+=== Dialog collection items would not display any icons chosen from icon pack.
+// #TINY-10174
+In earlier versions of {productname}, the collections dialog component encountered an issue where items added to the collections failed to fetch the specified icon set in the "icon" property.
+
+{productname} 6.8 addresses this issue, now, the collections dialog component correctly retrieves the icon specified in the "icon" property. As a fallback measure, if the specified icon cannot be retrieved, {productname} will use the string set within the property.
+
+For information on the **Dialog layout components for collections** plugin see xref:dialog-components.adoc#collection[dialog components].
 
 [[known-issues]]
 == Known issues
