--- a/modules/ROOT/pages/events.adoc
+++ b/modules/ROOT/pages/events.adoc
@@ -171,7 +171,7 @@ The following events are provided by the {productname} editor.
 |StylesTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `styles` bespoke toolbar button is updated. `value` refers to the updated visible text label.
 |BlocksTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `blocks` bespoke toolbar button is updated. `value` refers to the updated visible text label.
 |AlignTextUpdate |`+{ value: string }+` |Fired after the visible icon of the `align` bespoke toolbar button is updated. `value` refers to the updated visible icon.
-|FontSizeTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `fontsize` bespoke toolbar button is updated. `“value refers to the updated visible text label.”`
+|FontSizeTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `fontsize` bespoke toolbar button is updated. `value` refers to the updated visible text label.
 |FontSizeInputTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `fontsizeinput` bespoke toolbar button is updated. `“value refers to the updated visible text label.”`
 |FontFamilyTextUpdate |`+{ value: string }+` |Fired after the visible text label of the `fontfamily` bespoke toolbar button is updated. `“value refers to the updated visible text label.”`
 |===
