--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -141,7 +141,7 @@ The {productname} 6.8 release includes an accompanying release of the **PowerPas
 
 === Safari - Improve pasting content with sidebar comments from the Word document
 // TINY-10229
-Previously, when copying content, including comments, and subsequently pasting it into a {productname} document, the comments where also unintentionally included in the pasted data.
+Previously, when copying content, including comments, and subsequently pasting it into a {productname} document, the comments were also unintentionally included in the pasted data.
 
 {productname} 6.8 addresses this issue, now, when a user copy's and paste's content from word with the inclusion of comments, the **Powerpaste** plugin now exclude these comments from the pasted content.
 
