--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -76,7 +76,7 @@ The {productname} 6.8 release includes an accompanying release of the **Advanced
 
 **Advanced Templates** 1.4.0 includes the following addition and fix.
 
-==== AdvTemplate add fixed `{{clipboard}}` marker
+==== AdvTemplate fixed `{{mce-cursor}}` marker
 // #TINY-9974
 **Advanced Template** 1.4.0 introduces a new feature that allows templates to now include special markers, denoted as `+{{mce-clipboard}}+`. These markers serve as placeholders that indicate where clipboard content should be inserted once the template is added to the editor's content.
 
