--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -577,7 +577,7 @@ In {productname} 6.7.0, each cell in the table grid menu item was updated so tha
 
 In {productname} 6.8.0 translations were added for this text, though this announcement was still only available in English as the syntax used for the table grid announcement text in detecting strings which are to be translated was invalid.
 
-In {productname} 6.8.1 the syntax has been corrected and each cell in the table grid now announces the current selected columns and rows in the correct language, _not only_ in English.
+{productname} 6.8.1 addresses this, now, the syntax has been corrected and each cell in the table grid announces the current selected columns and rows in the correct language, _not only_ in English.
 
 
 [[known-issues]]
