DOC-2216: add new single  bundling feature example for .

--- a/modules/ROOT/pages/introduction-to-bundling-tinymce.adoc
+++ b/modules/ROOT/pages/introduction-to-bundling-tinymce.adoc
@@ -13,6 +13,10 @@ The following guides and reference pages assist with bundling {productname} usin
 * xref:webpack-es6-download.adoc[ES6 and a .zip archive]
 * xref:webpack-cjs-download.adoc[CommonJS and a .zip archive]
 
+== Vite
+
+* xref:vite-es6-npm.adoc[Vite, ES6 and npm]
+
 [[rollupjs]]
 == Rollup.js
 
