DOC-2216: update , remove  in shell commands, update scaffolding commands.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -196,7 +196,7 @@
 **** xref:webpack-es6-download.adoc[ES6 and a .zip archive]
 **** xref:webpack-cjs-download.adoc[CommonJS and a .zip archive]
 *** Vite
-**** xref:vite-es6-npm.adoc[Vite, ES6 and npm]
+**** xref:vite-es6-npm.adoc[ES6 and npm]
 *** Rollup.js
 **** xref:rollup-es6-npm.adoc[ES6 and npm]
 **** xref:rollup-es6-download.adoc[ES6 and a .zip archive]
